# otel_example

./: Cargo.toml  README.md  SECURITY.md  docker-compose.yml  prometheus.yml
.github/: CONTRIBUTING.md
src/: lib.rs  main.rs  metrics.rs  things.rs
