[package]
name = "otel_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# opentelemetry-proto = { features = ["gen-tonic"], version = "0.3.0" }
opentelemetry = { version = "0.20.0", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", default-features = false, features = [
    "serde",
    "logs",
    "metrics",
    "http-proto",
    "grpc-tonic",
] }
opentelemetry-stdout = { version = "0.1.0", features = [
    "logs",
    "metrics",
    "trace",
] }
opentelemetry_api = { version = "0.20.0", features = ["logs", "metrics"] }
opentelemetry_sdk = "0.20.0"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["full"] }
tonic = "0.10.2"
tracing = "0.1.40"
tracing-forest = "0.1.6"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = "0.3.17"
uuid = { version = "1.5.0", features = ["v4"] }
